--- a/assets/style.scss
+++ b/assets/style.scss
@@ -15,4 +15,21 @@ body {
 	flex-shrink: 0;
 	scroll-snap-align: start;
 	scroll-snap-stop: always;
+	position: relative;
+}
+
+#pageCamera {
+	#cameraSensor, #cameraViewfinder, #cameraOutput {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	#cameraTrigger {
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		transform: translateX(-50%);
+	}
 }
