--- a/assets/style.scss
+++ b/assets/style.scss
@@ -36,8 +36,25 @@ body {
 	}
 	#cameraTrigger {
 		position: absolute;
-		bottom: 0;
+		bottom: 1rem;
 		left: 50%;
 		transform: translateX(-50%);
+		width: max(10vw, 10vh);
+		height: max(10vw, 10vh);
+		background: rgba(0,0,0,0.5);
+		border: none;
+		border-radius: 50%;
+
+		&::before {
+			content: "";
+			width: 70%;
+			height: 70%;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			border-radius: 50%;
+			border: 0.5vw white solid;
+		}
 	}
 }
