SocialMediaDemo: use back button to go to previous page

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,6 +8,7 @@ body {
 	display: flex;
 	flex-flow: row nowrap;
 	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
 }
 .page {
 	width: 100%;
