--- a/assets/css/pageCamera.scss
+++ b/assets/css/pageCamera.scss
@@ -32,9 +32,13 @@
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			transform: translate(-50%, -50%);
 			border-radius: 50%;
 			border: 0.5vw white solid;
+			transform: translate(-50%, -50%);
+			transition: transform 0.2s;
+		}
+		&:hover::before {
+			transform: translate(-50%, -50%) scale(calc(90 / 70));
 		}
 	}
 }
