SocialMediaDemo: populate chat options with dummy data

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,4 +37,12 @@ body {
 	}
 }
 
+.portraitArea {
+	width: 100%;
+	max-width: 50vh;
+	height: 100%;
+	margin: auto;
+}
+
 @import "pageCamera";
+@import "pageChat";
