SocialMediaDemo: disable icon bg repeating

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ body {
 
 	&.icon-btn-back {
 		min-width: 1em;
-		background: url("/SocialMediaDemo/assets/images/icons/larr.svg") center center;
+		background: url("/SocialMediaDemo/assets/images/icons/larr.svg") no-repeat center center;
 		background-size: contain;
 		color: transparent;
 	}
