--- a/assets/css/pageChat.scss
+++ b/assets/css/pageChat.scss
@@ -1,4 +1,30 @@
 #pageChat {
+	.pageChat-search-parent {
+		display: flex;
+		padding: 1rem;
+
+		#pageChatSearch {
+			flex: 1;
+			width: 100%;
+			border: none;
+		}
+
+		> * {
+			background: rgba(0,0,0,0.1);
+			padding: 0.4rem;
+		}
+		> :nth-child(1) {
+			border-top-left-radius: 1rem;
+			border-bottom-left-radius: 1rem;
+			padding-left: 1.5rem;
+		}
+		> :nth-last-child(1) {
+			border-top-right-radius: 1rem;
+			border-bottom-right-radius: 1rem;
+			padding-right: 1.5rem;
+		}
+	}
+
 	#pageChatOptions {
 		width: 100%;
 		max-width: 100%;
