--- a/assets/css/pageCamera.scss
+++ b/assets/css/pageCamera.scss
@@ -19,12 +19,13 @@
 		position: absolute;
 		bottom: 1rem;
 		left: 50%;
-		transform: translateX(-50%);
 		width: max(10vw, 10vh);
 		height: max(10vw, 10vh);
 		background: rgba(0,0,0,0.5);
 		border: none;
 		border-radius: 50%;
+		transform: translateX(-50%);
+		transition: transform 0.2s;
 
 		&::before {
 			content: "";
@@ -38,8 +39,13 @@
 			transform: translate(-50%, -50%);
 			transition: transform 0.2s;
 		}
-		&:hover::before {
-			transform: translate(-50%, -50%) scale(calc(90 / 70));
+		&:hover {
+			& {
+				transform: translateX(-50%) scale(0.9);
+			}
+			&::before {
+				transform: translate(-50%, -50%) scale(calc(90 / 70));
+			}
 		}
 	}
 }
