--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,11 +23,14 @@ body, .page {
 		opacity: 1;
 	}
 
-	&.icon-btn-back {
+	&.icon-btn-left, &.icon-btn-right {
 		min-width: 1em;
 		background: url("/SocialMediaDemo/assets/images/icons/larr.svg") no-repeat center center;
 		background-size: contain;
 		color: transparent;
+	}
+	&.icon-btn-right {
+		transform: rotate(180deg);
 	}
 }
 .page {
