SocialMediaDemo: add basic login frontend

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,6 +83,7 @@ html, body, .page {
 
 @import "pageCamera";
 @import "pageChat";
+@import "pageLogin";
 
 @media screen and (prefers-color-scheme: dark) {
 	html, body, .page {
