SocialMediaDemo: login: use ajax for forms

--- a/assets/css/pageLogin.scss
+++ b/assets/css/pageLogin.scss
@@ -2,4 +2,14 @@
 	> .portraitArea {
 		padding: 1rem;
 	}
+
+	.form-error {
+		color: #d20000;
+	}
+	
+	@media (prefers-color-scheme: dark) {
+		.form-error {
+			color: #ff6565;
+		}
+	}
 }
