SocialMediaDemo: add empty search page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,6 +84,7 @@ html, body, .page {
 @import "pageCamera";
 @import "pageChat";
 @import "pageLogin";
+@import "pageSearch";
 
 @media screen and (prefers-color-scheme: dark) {
 	html, body, .page {
