--- a/assets/css/pageSearch.scss
+++ b/assets/css/pageSearch.scss
@@ -1,7 +1,8 @@
-#pageSearch {
+#pageOverlaySearch {
 	.pageChat-search-parent {
 		width: 100%;
 		padding: 0;
 		font-size: 1rem;
+		margin: -0.25rem;
 	}
 }
