--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,6 +84,7 @@ html, body, .page {
 @import "pageCamera";
 @import "pageChat";
 @import "pageLogin";
+@import "pageChatOpen";
 @import "pageSearch";
 
 @media screen and (prefers-color-scheme: dark) {
