--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,7 +84,7 @@ html, body, .page {
 @import "pageCamera";
 @import "pageChat";
 @import "pageLogin";
-@import "pageChatOpen";
+@import "pageMessages";
 @import "pageSearch";
 
 @media screen and (prefers-color-scheme: dark) {
