--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -19,7 +19,7 @@
 			margin-bottom: 0.5rem;
 
 			display: table; // hack to get messages to autosize
-			max-width: max(75%, 20rem);
+			max-width: min(max(75%, 20rem), 90%);
 
 			&:not(.pageMessages-message-own) {
 				border-bottom-left-radius: 0;
