--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,6 +83,7 @@ html, body, .page {
 
 .input-group {
 	display: flex;
+	position: relative;
 	padding: 1rem;
 
 	input, textarea {
@@ -93,23 +94,31 @@ html, body, .page {
 		overflow: hidden;
 	}
 
-	> * {
+	&::before {
+		content: "";
+		position: absolute;
+		top: 1rem;
+		left: 1rem;
+		bottom: 1rem;
+		right: 1rem;
 		background: rgba(0,0,0,0.1);
-		padding: 0.4rem;
-		border: none;
+		border-radius: 1rem;
+		pointer-events: none;
 
 		@media screen and (prefers-color-scheme: dark) {
 			background: rgba(255,255,255,0.15);
 		}
 	}
+
+	> * {
+		background: transparent;
+		padding: 0.4rem;
+		border: none;
+	}
 	> :nth-child(1) {
-		border-top-left-radius: 1rem;
-		border-bottom-left-radius: 1rem;
 		padding-left: 1.5rem;
 	}
 	> :nth-last-child(1) {
-		border-top-right-radius: 1rem;
-		border-bottom-right-radius: 1rem;
 		padding-right: 1.5rem;
 	}
 }
