--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -46,4 +46,17 @@
 			}
 		}
 	}
+
+	@media (prefers-color-scheme: dark) {
+		ul#pageMessages-messages {
+			li.pageMessages-message {
+				background: rgba(255, 255, 255, 0.01);
+				box-shadow: rgba(255, 255, 255, 0.1) 0.05rem 0.05rem 0.4rem;
+
+				&.pageMessages-message-own {
+					background: rgba(255, 255, 255, 0.05);
+				}
+			}
+		}
+	}
 }
