SMD: pageSearch: reuse pageChatOptionTemplate for search results

--- a/assets/css/pageSearch.scss
+++ b/assets/css/pageSearch.scss
@@ -4,4 +4,11 @@
 		font-size: 1rem;
 		margin: -1.25rem;
 	}
+
+	#pageSearchResults {
+		width: 100%;
+		max-width: 100%;
+		list-style: none;
+		padding: 0;
+	}
 }
