--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,7 @@ html, body, .page {
 		top: 0;
 		left: 0;
 		transform: translateX(100%);
-		transition: transform 0.5s;
+		transition: transform 0.5s ease-in-out;
 		&.page-overlay-show {
 			transform: translateX(0);
 		}
