--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,6 +48,7 @@ html, body, .page {
 		position: absolute;
 		top: 0;
 		left: 0;
+		z-index: 1;
 		transform: translateX(100%);
 		transition: transform 0.5s ease-in-out;
 		&.page-overlay-show {
