SMD: create empty pageProfileEdit

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -127,6 +127,7 @@ html, body, .page {
 @import "pageMessages";
 @import "pageSearch";
 @import "pageProfile";
+@import "pageProfileEdit";
 
 @media screen and (prefers-color-scheme: dark) {
 	html, body, .page {
