--- a/assets/css/pageProfile.scss
+++ b/assets/css/pageProfile.scss
@@ -23,6 +23,10 @@
 
 		.pageProfile-title {
 			font-size: 1.25em;
+			margin-top: 0;
+			margin-bottom: 0.5rem;
+			font-weight: 500;
+			line-height: 1.2;
 			.pageProfile-pronouns {
 				opacity: 0.6;
 				padding-inline-start: 0.2em;
