--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -12,6 +12,12 @@
 		padding: 1rem;
 		margin-bottom: 0;
 
+		li.pageMessages-daySeparator {
+			background: transparent;
+			text-align: center;
+			padding: 0.5rem;
+		}
+
 		li.pageMessages-message {
 			background: rgba(0,0,0,0.01);
 			box-shadow: rgba(0,0,0,0.1) 0.1rem 0.1rem 0.1rem;
