--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,6 +77,7 @@ html, body, .page {
 			font-size: calc(1.375rem + 1vw);
 			margin-bottom: 0;
 			line-height: 100%;
+			padding: 0;
 		}
 		> h1 {
 			flex: 1;
