--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,14 +23,19 @@ html, body, .page {
 		opacity: 0.99;
 	}
 
-	&.icon-btn-left, &.icon-btn-right {
+	&.icon-btn-left, &.icon-btn-right, &.icon-btn-refresh {
 		min-width: 1em;
 		background: url("/SocialMediaDemo/assets/images/icons/larr.svg") no-repeat center center;
 		background-size: contain;
 		color: transparent;
+		align-self: center;
 	}
 	&.icon-btn-right {
 		transform: rotate(180deg);
+	}
+	&.icon-btn-refresh {
+		background-image: url("/SocialMediaDemo/assets/images/icons/refresh.svg");
+		height: 75%;
 	}
 
 	&.icon-btn-pfp {
@@ -149,7 +154,8 @@ html, body, .page {
 		color: white;
 	}
 	.icon-btn-left,
-	.icon-btn-right {
+	.icon-btn-right,
+	.icon-btn-refresh {
 		filter: brightness(0) invert(1);
 	}
 	input, textarea {
