pageMessages: add max-height to image messages

--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -62,6 +62,7 @@
 				img {
 					margin: -0.7rem -0.7rem 0 -0.7rem;
 					width: calc(100% + 1.4rem);
+					max-height: 40vh;
 				}
 				.pageMessages-message-footer {
 					margin-top: -0.05rem;
