--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -62,6 +62,7 @@
 				img {
 					margin: -0.7rem -0.7rem 0 -0.7rem;
 					width: calc(100% + 1.4rem);
+					height: auto;
 					max-height: 30vh;
 					min-width: 11rem;
 					object-fit: cover;
