--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,25 @@
+@mixin darkPageContents {
+	background: black;
+	color: white;
+
+	.icon-btn-left, .icon-btn-right, .icon-btn-refresh, .icon-btn-logout, .icon-btn-upload {
+		filter: brightness(0) invert(1);
+	}
+	input, textarea {
+		color: white;
+	}
+
+	.input-group {
+		color: white;
+		&::before {
+			background: rgba(255,255,255,0.15);
+		}
+		> * {
+			color: white;
+		}
+	}
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -66,6 +88,10 @@ html, body, .page {
 
 	display: flex;
 	flex-flow: column nowrap;
+
+	&.page-dark {
+		@include darkPageContents;
+	}
 
 	&.page-overlay {
 		position: fixed;
@@ -153,23 +179,6 @@ html, body, .page {
 
 @media screen and (prefers-color-scheme: dark) {
 	html, body, .page {
-		background: black;
-		color: white;
-	}
-	.icon-btn-left, .icon-btn-right, .icon-btn-refresh, .icon-btn-logout, .icon-btn-upload {
-		filter: brightness(0) invert(1);
-	}
-	input, textarea {
-		color: white;
-	}
-
-	.input-group {
-		color: white;
-		&::before {
-			background: rgba(255,255,255,0.15);
-		}
-		> * {
-			color: white;
-		}
+		@include darkPageContents;
 	}
 }
