--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -62,6 +62,7 @@
 				img {
 					margin: -0.7rem -0.7rem 0 -0.7rem;
 					height: auto;
+					min-height: 3rem;
 					max-height: 30vh;
 					width: 30vh;
 					min-width: 11rem;
