pageMessages: remove padding near read indicator

--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -9,7 +9,7 @@
 		overflow-y: auto;
 		scroll-behavior: smooth;
 		list-style: none;
-		padding: 1rem;
+		padding: 1rem 1rem 0 1rem;
 		margin-bottom: 0;
 
 		.lastRead-text {
