--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -75,14 +75,28 @@
 
 			&.pageMessages-image {
 				img {
-					margin: -0.7rem -0.7rem 0 -0.7rem;
 					height: auto;
+					width: 30vh;
+					object-fit: cover;
+				}
+				img:not(.expand) {
 					min-height: 3rem;
 					max-height: 30vh;
-					width: 30vh;
 					min-width: 11rem;
 					max-width: calc(100% + 1.4rem);
-					object-fit: cover;
+
+					margin: -0.7rem -0.7rem 0 -0.7rem;
+				}
+				img.expand {
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					width: 100vw !important;
+					height: 100%;
+					transform: translate(-50%, -50%);
+					border-radius: 0;
+					background: rgba(0,0,0,0.9);
+					object-fit: contain;
 				}
 				.pageMessages-message-footer {
 					margin-top: -0.05rem;
