--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -6,6 +6,7 @@
 
 	ul#pageMessages-messages {
 		flex: 1;
+		overflow-x: hidden;
 		overflow-y: auto;
 		scroll-behavior: smooth;
 		list-style: none;
