--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -102,6 +102,17 @@
 					max-width: 100%;
 					max-height: 100%;
 				}
+				img.post-expand {
+					transition-duration: 0s;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					width: 100vw !important;
+					height: 100%;
+					transform: translate(-50%, -50%);
+					object-fit: contain;
+					z-index: 1;
+				}
 				.pageMessages-message-footer {
 					margin-top: -0.05rem;
 					margin-bottom: -0.8rem;
