Attributions: move to its own page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -193,6 +193,7 @@ html, body, .page {
 @import "pageSearch";
 @import "pageProfile";
 @import "pageProfileEdit";
+@import "pageAttributions";
 
 @media screen and (prefers-color-scheme: dark) {
 	html, body, .page {
