--- a/assets/css/pageChat.scss
+++ b/assets/css/pageChat.scss
@@ -44,6 +44,9 @@
 		font-size: 1rem;
 		margin-bottom: 0;
 		font-weight: initial;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	.pageChat-option-lastMsg-container {
 		opacity: 0.7;
