--- a/assets/css/pageAttributions.scss
+++ b/assets/css/pageAttributions.scss
@@ -3,10 +3,18 @@
 		text-align: center;
 	}
 	img {
-		max-height: 15vh;
-		max-width: 25vw;
+		height: 15vh;
+		max-height: 25vw;
+		width: 100%;
 		padding: 1rem;
 		object-fit: contain;
+
+		// transparent background, from https://projects.verou.me/css3patterns/#checkerboard
+		background-color: #eee;
+		background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
+						  linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
+		background-size: 2rem 2rem;
+		background-position: 0 0, 1rem 1rem;
 	}
 	.card {
 		display: inline-block;
