Messages: click on username to view profile

--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -1,4 +1,9 @@
 #pageMessages {
+	.page-header a {
+		color: inherit;
+		text-decoration: none;
+	}
+
 	.portraitArea {
 		display: flex;
 		flex-flow: column nowrap;
