Profile: hide edit button if not own profile

--- a/assets/css/pageProfile.scss
+++ b/assets/css/pageProfile.scss
@@ -37,9 +37,9 @@
 		}
 	}
 
-	&.pageProfile-own {
-		#pageProfileEditLink {
-			display: inline-block;
+	&:not(.pageProfile-own) {
+		.pageProfile-own-only {
+			display: none;
 		}
 	}
 }
