Profile: add small padding to summary

--- a/assets/css/pageProfile.scss
+++ b/assets/css/pageProfile.scss
@@ -20,6 +20,9 @@
 				aspect-ratio: 1;
 			}
 		}
+		.pageProfile-summary {
+			padding-top: 0.2rem;
+		}
 
 		.pageProfile-title {
 			font-size: 1.25em;
