style: add dark mode for up/down buttons

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 	background: black;
 	color: white;
 
-	.icon-btn-left, .icon-btn-right, .icon-btn-refresh, .icon-btn-logout, .icon-btn-upload {
+	.icon-btn-left, .icon-btn-right, .icon-btn-up, .icon-btn-down, .icon-btn-refresh, .icon-btn-logout, .icon-btn-upload {
 		filter: brightness(0) invert(1);
 	}
 	input, textarea {
