--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -25,11 +25,14 @@
 			bottom: 0;
 			left: 50%;
 			opacity: 0;
-			transform: translateX(-50%) rotate(180deg);
+			transform: translate(-50%, 100%) rotate(180deg);
+			transition: 0.2s;
+			transition-property: transform, opacity;
 			pointer-events: none;
 
 			&.show {
 				opacity: initial;
+				transform: translate(-50%, 0) rotate(180deg);
 				pointer-events: initial;
 			}
 		}
