--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -129,6 +129,8 @@
 
 					border-radius: 0;
 					transform: translate(0, 0) scale(1);
+					position: relative;
+					z-index: 1;
 				}
 				img.pre-expand {
 					margin: 0;
