Messages: use correct scale on desktop

--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -141,7 +141,7 @@
 					position: absolute;
 					top: 50%;
 					left: 50%;
-					width: 100vw !important;
+					width: 100% !important;
 					height: 100%;
 					transform: translate(-50%, -50%);
 					object-fit: contain;
