--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,6 +54,9 @@ body {
 	flex-flow: row nowrap;
 	scroll-snap-type: x mandatory;
 	scroll-behavior: smooth;
+	@media (prefers-reduced-motion) {
+		scroll-behavior: auto;
+	}
 }
 html, body, .page {
 	background: white;
@@ -129,10 +132,18 @@ html, body, .page {
 		top: 0;
 		left: 0;
 		z-index: 1;
+
 		transform: translateX(100%);
 		transition: transform 0.5s ease-in-out;
 		&.page-overlay-show {
 			transform: translateX(0);
+		}
+		@media (prefers-reduced-motion) {
+			opacity: 0;
+			transition-property: opacity;
+			&.page-overlay-show {
+				opacity: 1;
+			}
 		}
 	}
 
