prefersReducedMotion: Messages: expand images

--- a/assets/css/pageMessages.scss
+++ b/assets/css/pageMessages.scss
@@ -123,6 +123,10 @@
 
 					transition: 0.3s ease;
 					transition-property: transform, border-radius, max-width, max-height;
+					
+					@media (prefers-reduced-motion) {
+						transition-property: border-radius;
+					}
 				}
 				img.expand {
 					margin: 0;
